{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 14,
  "lineage": "7842ede8-3c07-29b3-4e56-e8c7f372a99c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:509884510970:vpc/vpc-0a7dd4e8a52a11365",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d5c677aef6387090",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ecca6ff758199447",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a7dd4e8a52a11365",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acee4e9e8ccc1db7",
            "owner_id": "509884510970",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gestor_recetas_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:loadbalancer/app/gestor-recetas/bbee9e7b7159919d",
            "arn_suffix": "app/gestor-recetas/bbee9e7b7159919d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gestor-recetas-386442158.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:loadbalancer/app/gestor-recetas/bbee9e7b7159919d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gestor-recetas",
            "security_groups": [
              "sg-0e36703dfd779e142"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079c5c8bac6f45d7b"
              },
              {
                "subnet_id": "subnet-094be3626aa9cb0ca"
              },
              {
                "subnet_id": "subnet-0afceda83f2c46cf5"
              }
            ],
            "subnets": [
              "subnet-079c5c8bac6f45d7b",
              "subnet-094be3626aa9cb0ca",
              "subnet-0afceda83f2c46cf5"
            ],
            "vpc_id": "vpc-0a7dd4e8a52a11365",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.gestor_recetas_alb",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:listener/app/gestor-recetas/bbee9e7b7159919d/f41f217aff5b60f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Page Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:listener/app/gestor-recetas/bbee9e7b7159919d/f41f217aff5b60f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:loadbalancer/app/gestor-recetas/bbee9e7b7159919d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gestor_recetas_lb",
            "aws_security_group.gestor_recetas_alb",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:targetgroup/gestor-recetas-tg/355d697ac9a06877",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:listener-rule/app/gestor-recetas/bbee9e7b7159919d/f41f217aff5b60f5/17828f37c2ebccc8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:listener-rule/app/gestor-recetas/bbee9e7b7159919d/f41f217aff5b60f5/17828f37c2ebccc8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:listener/app/gestor-recetas/bbee9e7b7159919d/f41f217aff5b60f5",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gestor_recetas_lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.gestor_recetas_tg",
            "aws_security_group.gestor_recetas_alb",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gestor_recetas_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:targetgroup/gestor-recetas-tg/355d697ac9a06877",
            "arn_suffix": "targetgroup/gestor-recetas-tg/355d697ac9a06877",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:509884510970:targetgroup/gestor-recetas-tg/355d697ac9a06877",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gestor-recetas-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a7dd4e8a52a11365"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gestor_recetas_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:509884510970:security-group/sg-0e36703dfd779e142",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e36703dfd779e142",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gestor-recetas-alb",
            "name_prefix": "",
            "owner_id": "509884510970",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7dd4e8a52a11365"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:509884510970:security-group/sg-0ea850c8c98c99a20",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ea850c8c98c99a20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gestor-recetas",
            "name_prefix": "",
            "owner_id": "509884510970",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7dd4e8a52a11365"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}